syntax = "proto3";
package github.com.cosmos.cosmossdk.x.mock.simulation;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.protosizer_all) = true;
option (gogoproto.sizer_all) = false;
option go_package = "simulation";

// TransitionMatrix is _almost_ a left stochastic matrix.  It is technically
// not one due to not normalizing the column values.  In the future, if we want
// to find the steady state distribution, it will be quite easy to normalize
// these values to get a stochastic matrix.  Floats aren't currently used as
// the default due to non-determinism across architectures
message TransitionMatrix {
	option (gogoproto.goproto_getters) = false;
	option (gogoproto.typedecl) = false;
}

